test/yaml/testdata/input/standard/normal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  namespace: namespace1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /path-ingress1
        pathType: Prefix
        backend:
          service:
            name: service-ingress1
            port:
              number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: service-ingress1
  namespace: namespace1
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
